# texture_map_optimization

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  color_handle.hpp  conanfile.txt  cost.hpp  crane.ply  crane_cut.ply  cut_mesh_rosy.hpp  cutting.cpp  generate_trivial_texture.hpp  glob.cpp  glob.h  load_data.hpp  load_poses.hpp  main.cpp  scaf.hpp  trajectory.hpp  uv_unwrap.hpp  vertex_color_drawable.cpp  vertex_colored_drawable.h  viewer.cpp  viewer.h
Contrib/: CMakeLists.txt
Optimization/: CMakeLists.txt  Cost.h  KeyFrame.cpp  KeyFrame.h  Optimization.cpp  Optimization.h  RenderPass.cpp  RenderPass.h
ScopedTimer/: CMakeLists.txt  ScopedTimer.h
ScopedTimer/include/ScopedTimer/: ScopedTimer.cpp
Shaders/: CMakeLists.txt  Combine.comp  Combine.cpp  Combine.h  DepthFilter.comp  DepthFilter.cpp  DepthFilter.h  Diff.cpp  Diff.frag  Diff.h  Diff.vert  FullScreenTriangle.cpp  FullScreenTriangle.h  Reduction.comp  Reduction.cpp  Reduction.h  Remap.cpp  Remap.h  TextureCoordinates.cpp  TextureCoordinates.h  Vis.comp  Vis.cpp  Vis.h  generic.glsl  resources.conf
Utilities/: Allocate.h  CMakeLists.txt  RemoveIf.h  Types.h  UniqueFunction.h  UniqueFunction.hpp  Utilities.h
Viewer/: ArcBall.h  CMakeLists.txt  IO.cpp  IO.h  Viewer.cpp  Viewer.h
assets/fountain_small/scene/: fountain.ply  integrated.ply  integrated_tex.ply  integrated_tex_bin.ply  mesh.ply
assets/leaf/: Read me.txt
assets/leaf/Textures/: T_Leaf_21_AO.tga  T_Leaf_21_A_Backside.tga  T_Leaf_21_D.psd  T_Leaf_21_N_Var_01.TGA  T_Leaf_21_N_Var_02.TGA  T_Leaf_21_R.tga  T_Leaf_21_R_AO_D.TGA  T_Leaf_21_Tr.TGA
io/: CMakeLists.txt  glob.cpp  io.cpp  io.h  io.hpp  load_mesh_data.cpp  load_mesh_data.hpp  load_poses.hpp
mesh/: compile_open_mesh.cpp  compile_open_mesh.hpp  mesh.hpp
modules/: FindAssimp.cmake  FindSDL2.cmake
optimization/: CMakeLists.txt  Cost.cpp  Cost.h  KeyFrame.cpp  KeyFrame.h  Optimization.cpp  Optimization.h  RenderPass.cpp  RenderPass.h  cost.cpp  cost.hpp  keyframe.h  optimization.cpp  optimization.hpp
pointcloud/: CMakeLists.txt  pointcloud.cpp  pointcloud.hpp
scoped_timer/: CMakeLists.txt
scoped_timer/include/scoped_timer/: scoped_timer.cpp  scoped_timer.hpp
shaders/: CMakeLists.txt  ChainRule.comp  ChainRule.cpp  ChainRule.h  Combine.cpp  Combine.h  Diff.cpp  Diff.frag  Diff.h  Diff.vert  Reduction.comp  Reduction.cpp  Reduction.h  Remap.comp  Remap.cpp  Remap.h  ScreenTriangle.cpp  ScreenTriangle.frag  ScreenTriangle.h  Sobel.comp  Sobel.cpp  Sobel.h  TextureCoordinates.cpp  TextureCoordinates.frag  TextureCoordinates.h  TextureCoordinates.vert  average_color.cpp  average_color.frag  average_color.h  average_color.vert  background_shader.cpp  background_shader.frag  background_shader.hpp  background_shader.vert  coords_filter.cpp  coords_filter.frag  coords_filter.hpp  coords_filter.vert  cube_map_shader.cpp  cube_map_shader.frag  (+35 more)
utilities/: CMakeLists.txt  UniqueFunction.hpp
viewer/: ArcBall.cpp  CMakeLists.txt  Viewer.cpp  Viewer.h  arc_ball.cpp  arc_ball.h  arc_ball_camera.hpp  compile_open_mesh.cpp  compile_open_mesh.hpp  drawables.cpp  drawables.h  drawables.hpp  object.hpp  render_pass.cpp  render_pass.hpp  render_target.cpp  render_target.hpp  scene.cpp  scene.hpp  scene_graph_node.cpp  scene_graph_node.hpp  smart_drawable.hpp  types.h  types.hpp  viewer.cpp  viewer.h  viewer.hpp
